# cify

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: schedules.yml
crates/schedule/: Cargo.toml
crates/schedule/src/: error.rs  extract.rs  lib.rs  timetable.rs
crates/schedule/src/extract/: association.rs  header.rs  identifier.rs  location.rs  schedule.rs  tiploc.rs
crates/schedule/tests/: extract.cif  integration.rs
crates/schedule_api/: Cargo.toml
crates/schedule_api/src/: main.rs
src/: error.rs  extract.rs  lib.rs  schedule.rs
src/extract/: header.rs  identifier.rs  location.rs  schedule.rs  tiploc.rs
tests/: extract.cif  integration.rs
