[package]
name = "cify"
description = "A deserializer for the Common Interface File used for exchanging train schedule information in the UK"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2.0.12"

[features]
serde = ["dep:serde"]
